--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,7 @@ body {
     display: flex;
     gap: 1.5rem;
     font-size: 1rem;
+
 }
 
 .header__link--cta {
@@ -215,6 +216,8 @@ body {
     display: flex;
     align-items: center;
     gap: 1.5rem;
+    list-style-type: none;
+
 }
 
 .header__nav-item,
@@ -229,6 +232,7 @@ body {
     letter-spacing: 0.03125rem;
     position: relative;
     padding: 1em 1.2em;
+    text-decoration: none;
 }
 
 .hero__btn,
@@ -703,10 +707,9 @@ body {
 
 .gallery__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    grid-template-columns: repeat(4, minmax(230px, 1fr));
     gap: 1rem;
     justify-content: center;
-    align-items: stretch;
 }
 
 .gallery__item {
@@ -814,7 +817,6 @@ body {
 
 .download__btn {
     display: inline-flex;
-    align-items: center;
     gap: 0.6em;
     text-decoration: none;
     font-size: 1.5rem;
@@ -826,7 +828,6 @@ body {
     font-family: var(--ff-medieval);
     font-weight: 700;
     transition: all 0.3s ease;
-    cursor: pointer;
 }
 
 .download__btn:hover {
